--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 											<a href="sample-pages-blog-detail.php">Blog Details Page</a>
 										</li>
 										<li class="usa-nav__submenu-item">
-											<a href="accessibility-language-assistance.php">Accessibility &amp; Language Assistance</a>
+											<a href="accessibility-language-assistance.html">Accessibility &amp; Language Assistance</a>
 										</li>
 										<li class="usa-nav__submenu-item">
 											<a href="sample-pages-city-stats.php">City Statistics</a>
